scraper and summarizers

--- a/summarize.ipynb
+++ b/summarize.ipynb
@@ -18,17 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "id": "be6e4498-0ce5-41af-b2f9-f7d62383ecd1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "from langchain import PromptTemplate\n",
     "from langchain.schema.document import Document\n",
     "from langchain_community.llms import Ollama\n",
     "from langchain.chains.summarize import load_summarize_chain\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain_community.document_loaders.pdf import PyPDFDirectoryLoader, PyPDFLoader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24b22e51-8a0f-426c-a459-13c1e6d3e08c",
+   "metadata": {},
+   "source": [
+    "## Instantiate LLM Model"
    ]
   },
   {
@@ -39,6 +49,128 @@
    "outputs": [],
    "source": [
     "llm = Ollama(model=\"llama3.1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a43044e7-dbe9-42bc-9d90-c7224f435247",
+   "metadata": {},
+   "source": [
+    "## Get Best Documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1716b926-8d00-465d-b691-b09e5d1bab7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/china.csv\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "627f0b32-2351-4631-8267-18e62752e6d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titles = \"\"\n",
+    "for i, title in df.title.items():\n",
+    "    titles += f\"{i}. {title} \\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1005842d-fcfd-4d76-a6b1-25ea63b710c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9be0bfba-f9f4-4e5b-a3d4-fb9978d148c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm.invoke"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1774d39d-6c49-4a3d-99fd-6896cb543218",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0. First Known Survivor of China’s Forced Organ Harvesting Speaks Out \n",
+      "1. China Hits Back at the US in Response to Doping Allegations Dogging Its Swimmers \n",
+      "2. SEATO’s 70th Anniversary: Lessons for Asia’s Emerging Multilateral Alliances \n",
+      "3. Nagasaki’s Atomic Bomb Commemoration Overshadowed by Israel-Palestine Divisions \n",
+      "4. Japan Issues First ‘Megaquake’ Warning \n",
+      "5. China Released New Renewable Energy Consumption Benchmarks \n",
+      "6. Evaluating Colombia’s Strategic Partnership With China \n",
+      "7. Australia’s Ambassador to Mongolia on Cooperation in Mining, Civil Society, Defense, and More \n",
+      "8. China Is Betting Big on Its ‘Little Giants’ \n",
+      "9. Commissioning 1000 New Ballistic Missiles Demonstrates North Korea’s Massive Production Capacity \n",
+      "10. Guangzhou Shows Why China Is So Attractive to the Global South \n",
+      "11. Securing America’s Critical Minerals: A Policy Priority Conundrum \n",
+      "12. How Bangladesh’s Quota Reform Protest Turned Into a Mass Uprising Against a ‘Killer Government’ \n",
+      "13. International Airlines Leave China, Despite Beijing’s Urging \n",
+      "14. The Silent Winner of Myanmar’s Northern Conflict \n",
+      "15. First Known Survivor of China’s Forced Organ Harvesting Speaks Out \n",
+      "16. Nuclear Shadows Over South Asia: Strategic Instabilities in the China-India-Pakistan Triad \n",
+      "17. Securing America’s Critical Minerals: A Policy Priority Conundrum \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f9b15f-1e3e-4c33-8be7-ba1e2a0a2122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_best_articles(df_path):\n",
+    "    \"\"\"\n",
+    "    Uses LLM to select the articlse with the highest relevance and importance\n",
+    "    \"\"\"\n",
+    "    # load df\n",
+    "    df = pd.read_csv(\"data/china.csv\") \n",
+    "\n",
+    "    # get titles\n",
+    "    titles = \"\"\n",
+    "    for i, title in df.title.items():\n",
+    "        titles += f\"{i}. {title} \\n\"\n",
+    "\n",
+    "    # use llm to select best titles\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1856c133-f3d7-4a5f-8552-13dcdcccb95a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_documents(df_path):\n",
+    "    df = pd.read_csv(df_path) \n",
+    "    document_loader = DataFrameLoader(df, page_content_column=\"content\")\n",
+    "    return document_loader.load()"
    ]
   },
   {
