--- a/summarize.ipynb
+++ b/summarize.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 167,
    "id": "24f9b15f-1e3e-4c33-8be7-ba1e2a0a2122",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
     "title_template = PromptTemplate(template=title_prompt, input_variables=[\"titles\"])\n",
     "\n",
     "stuff_prompt = \"\"\"\n",
-    "Summarize the below article in 300 words for a newsletter. \n",
+    "Summarize the below article in 300 words for a newsletter. Start immediately without introduction.\n",
     "\n",
     "{text}\n",
     "\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 168,
    "id": "5d7d55bb-7cd3-45c3-864b-b3627d040d11",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
     "    for document in documents:\n",
     "        #print(document)\n",
     "        output_summary = stuff_chain.invoke([document])\n",
-    "        outputs.append(output_summary)\n",
+    "        outputs.append(output_summary[\"output_text\"])\n",
     "\n",
     "    return outputs\n",
     "\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 169,
    "id": "a0b00c88-bea1-4ea7-99d0-3607e7919a5d",
    "metadata": {},
    "outputs": [
@@ -291,6 +291,49 @@
    ],
    "source": [
     "outputs = summarize_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "592e6bbb-6cce-4f74-a64d-093a169919ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"**China's Renewable Energy Targets Take Shape**\\n\\nIn a recent update, China's National Development and Reform Commission (NDRC) and National Energy Administration (NEA) have released new requirements for provinces to source energy from renewable generators in 2024 and 2025. This move is part of the country's renewable energy consumption guarantee mechanism, which aims to increase domestic renewable energy consumption.\\n\\nSix provinces have seen significant increases in their renewable energy consumption mandates between 2023 and 2024, with Heilongjiang experiencing the highest jump from 22.7% to 30.0%. Hainan, Henan, Jilin, Hunan, and Gansu also saw increases greater than 6 percentage points.\\n\\nChina is on track to meet its renewable energy consumption goals, with the mechanism serving its purpose in driving growth in renewable and non-hydro renewable consumption share. However, three provinces - Zhejiang, Yunnan, and Xinjiang - fell short of targets, but were more than made up for by the significant growth in other provinces.\\n\\nThe only potential cause for concern is the tentative mandates for 2025, which have not seen significant increases despite the overall trend of growth. This may signal that fossil fuel consumption is expected to rise in those four provinces over the next 18 months, or that these are conservative estimates that will be revised upwards when they become binding.\\n\\nOverall, China's renewable energy targets continue to evolve and improve, with the country taking steps towards meeting its goals of peaking emissions by 2030 and reaching carbon neutrality by 2060.\""
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs[\"china\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "280f98e8-5a10-45be-afb2-c5c154b1ffa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_documents': [Document(metadata={'title': 'Walmart breaks record with Q2 online grocery share', 'link': 'https://chainstoreage.com/walmart-breaks-record-q2-online-grocery-share'}, page_content='facebooktwitterlinkedInemail\\r\\nWalmart Inc. is more dominant in the U.S. online grocery market than ever.\\r\\nAccording to the \"U.S. eGrocery Market Share Report Q2 2024,\" based on data from the monthly Brick Meets Click/Mercatus grocery shopping survey, Walmart (excluding Sam’s Club) captured 37% of the U.S. online grocery market in the second quarter of 2024, climbing 1.5 percentage points from the same quarter in 2023 to mark its highest share level to date.\\r\\nIn contrast, supermarkets lost 2.5 percentage points during the recent quarter compared to a year ago to finish the second quarter of 2024 with 27.3%.\\xa0Walmart’s sales share (excluding Sam’s Club) began gaining on supermarkets in early 2022 after the expiration of the expanded child tax credit at the end of 2021 and as overall and food at home inflation was growing faster than wages.\\r\\nAccording to Brick Meets Click/Mercatus analysis, this led to dramatic drops in the personal savings rate and rapid growth of outstanding credit card balances while interest rates continued rising.\\r\\n[READ MORE:\\xa0Numerator: Walmart captured 21.4% of grocery dollar share during past 12 months]\\r\\nMeanwhile, Brick Meets Click/Mercatus data indicates Target has made more moderate sales share gains over the last several years, gaining 1.2 percentage points of share from the second quarter of 2021 and finishing the second quarter of 2024 with 7% of online grocery sales.\\r\\nBrick Meets Click/Mercatus analysis suggests that strong execution in filling pickup orders and a price gap halfway between supermarkets and\\xa0Walmart\\xa0likely helped Target’s online grocery performance.\\r\\nAnalysis of mass/supermarket Q2 performance\\r\\nOverall, the study shows that the mass format captured nearly half of all delivery sales in the second quarter of 2024, driven by\\xa0Walmart’s nearly eight-percentage point jump in delivery share from the same quarter in 2023.\\r\\nDuring the same period, supermarkets went from leading mass in delivery sales share by about one point to trailing by nearly 10 points, although recent promotional pushes by Instacart helped to boost supermarket sales share between the first and second quarters of 2024.\\r\\nDuring the same period, supermarkets went from leading mass in delivery sales share by about one point to trailing by nearly 10 points, although recent promotional pushes by Instacart helped to boost supermarket sales share between the first and second quarters of 2024.\\r\\nIn pickup, supermarkets ended the quarter with approximately 28% of the segment’s sales compared to mass, which claimed almost 58%. Mass lost one percentage point of pickup sales share year-over-year, while supermarkets lost more than double (2.1 percentage points). Pickup continues to remain the dominant receiving method for online grocery sales in the U.S. with a 45.5% share, down 1.1 percentage points year-over-year.\\r\\nThe share of supermarket customers who also shopped with mass during the quarter rose 3.7 percentage points, reaching more than 32% with roughly one in five doing so with\\xa0Walmart. This gain was fueled by increased dual usage within the middle two income groups ($50,000 to $99,000 annual household income and $100,000 - $199,000) while both the lowest ( less than $50,000) and highest-income ($200,000-plus) groups decreased cross-shopping year-over-year.\\r\\n\"Walmart’s reputation for low prices helped to attract households that wanted both the convenience of shopping online and ways to save money in this market,\" said David Bishop, partner at Brick Meets Click. \"The execution of its omnichannel strategy, plus the operational efficiencies aided by incredibly high order demand, has enabled\\xa0Walmart\\xa0to consistently deliver the type of experiences that customers expect and to lower its cost to serve online orders at the same time.\"\\r\\nThe analysis leverages data from the monthly Brick Meets Click/Mercatus grocery shopping survey, an independent research initiative conducted by Brick Meets Click since March 2020, and sponsored by Mercatus.\\r\\nOnline grocery sales rise in June fueled by delivery and ship-to-home   June was a strong month for online grocery sales in the United States, with sales increasing 8% year-over-year.           Online grocery sales projected to reach almost $120 billion by 2028   A new forecast shows online grocery sales are on pace to grow three-times faster than in-store sales over the next five years.\\r\\n')],\n",
+       " 'output_text': \"**Walmart Dominates US Online Grocery Market**\\n\\nAccording to a recent report, Walmart has become even more dominant in the US online grocery market, capturing 37% of the market share in Q2 2024. This represents a 1.5 percentage point increase from the same quarter last year and marks the company's highest share level to date.\\n\\nIn contrast, supermarkets saw a decline of 2.5 percentage points, finishing with 27.3% of the online grocery market. Walmart's sales share began gaining on supermarkets in early 2022, driven by factors such as inflation, declining personal savings rates, and rising interest rates.\\n\\nTarget also made moderate gains, increasing its share to 7% from 6% in Q2 2021. Brick Meets Click/Mercatus analysis suggests that Target's strong execution in filling pickup orders and a price gap halfway between supermarkets and Walmart contributed to its online grocery performance.\\n\\nThe report also highlights the growth of delivery sales, with mass formats (including Walmart) capturing nearly half of all delivery sales in Q2 2024. Pickup remains the dominant receiving method for online grocery sales, with a 45.5% share.\\n\\nAs online grocery sales continue to rise, Walmart's reputation for low prices and efficient execution has enabled it to deliver experiences that customers expect. With online grocery sales projected to reach almost $120 billion by 2028, companies will need to adapt to changing consumer behaviors and preferences.\"}"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs[\"retail\"][0]"
    ]
   },
   {
